retrieveUnpackaged/objects/Test_Case_Execution__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Execution_Date__c</fullName>
        <label>Actual Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Requirement</label>
        <referenceTo>Business_Requirement__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Execution_Date__c</fullName>
        <label>Planned Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SYS_Status__c</fullName>
        <formula>IF( SYS_Test_Result_Count__c&lt;&gt; SYS_Test_Result_Passed__c ,&quot;Failed&quot;,&quot;Passed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYS_Test_Result_Count__c</fullName>
        <label>SYS Test Result Count</label>
        <summaryForeignKey>Test_Step_Result__c.Test_Case_Execution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SYS_Test_Result_Passed__c</fullName>
        <label>SYS Test Result Passed</label>
        <summaryFilterItems>
            <field>Test_Step_Result__c.Passed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Step_Result__c.Test_Case_Execution__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Executions</relationshipLabel>
        <relationshipName>Test_Case_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case Execution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TCE-{YYMMDD}-{000}</displayFormat>
        <label>TCE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>